[project]
name = "Forecasting"
version = "0.1.0"
description = ""
authors = [
    {name = "sebnm"}
]
requires-python = ">=3.11,<3.15"
dependencies = [
    "numpy (>=2.4.2,<3.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "datasets (>=4.5.0,<5.0.0)",
    "statsmodels (>=0.14.6,<0.15.0)",
    "xgboost (>=3.2.0,<4.0.0)",
    "prophet (>=1.3.0,<2.0.0)",
    "torch (>=2.10.0,<3.0.0)",
    "ptflops (>=0.7.5,<0.8.0)",
]
[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.1.0,<27.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)"
]

